--- a/my-app/src/Components/Profile/Profile.sass
+++ b/my-app/src/Components/Profile/Profile.sass
@@ -8,4 +8,12 @@
   top: 170px
 
 
-  
+
+.Carousel 
+  display: flex
+  align-items: center
+  background-color: gold
+
+.Carousel img 
+  margin-left: 32.5%
+  width: 500px 
